Fixes before releases